# SmartCalcWebPy

./: .gitignore  README.md  index.html
SmartCalcDescktop/: Makefile  main.js  package.json
bootstrap/: tmp.html  tmp2.html
bootstrap/examples/dashboard/: index.html
bootstrap/my_html/: index.html
bootstrap/other_examples/: ripple.html  table_scrollbar.html
bootstrap/tmp/: index.html
charts/: embedding.html  graph.html  index.html  pie.html
html/: blocks.css  flex.html  handlers.js  index.html
my-electron-app/: .gitignore  Makefile  main.js  package-lock.json  package.json
pyinstall/: hello.py  hello.spec  helper.py  main.py  main.spec
pyinstall/my_project/: module.spec
pyinstall/my_project/hooks/: hook-my_package.py
pyinstall/my_project/my_package/: module.py
pyinstall/tmp/: rpn.py  rpn2.py
src/: .gitignore  Makefile  calc.html  docker-compose.yml  manage.spec  requirements.txt  script.js  style.css
src/Desktop/: .gitignore  Makefile  main.js  package-lock.json  package.json
src/Django/: Dockerfile  Makefile  docker-compose.yml  requirements.txt
src/Django/SmartCalcWeb/: manage.py
src/Django/scripts/: uninstall_packages.py
src/RPN/: RPN_Calculation.cc  RPN_Calculation.h  requirements.txt
src/SmartCalcWeb/: config.toml  manage.py
src/SmartCalcWeb/RPN/: setup.cfg  setup.py
src/SmartCalcWeb/SmartCalcWeb/: asgi.py  (+3 more)
src/Vue/: Makefile
src/docker/: Dockerfile
tmp/: hello.py
tutorial/mysite/: manage.py
vue_ui/: Makefile
vue_ui/SmartCalcWebUi/: README.md  index.html  package-lock.json  package.json
vue_ui/src/: App.vue
(+162 files in other folders)
