[metadata]
name=SmartCalc
author=pintoved
author_email=pintoved@student.21-school.ru
url=https://github.com/Eleott-hi/PySmartCalc
description=Smart calculator, using C++ RPN (Reverse Polish Notation), QML (UI) and Python3 MVVM pattern binding
long_description=
python_requires=">=3.7"
; zip_safe=False
extras_require={"test": "pytest"}